--- a/shopweb/web/cookies.html
+++ b/shopweb/web/cookies.html
@@ -1,166 +1,176 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if lt IE 7]>
+<html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>
+<html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>
+<html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!-->
 <html class="no-js">
 <!--<![endif]-->
 
 <head>
 
-<!-- template:headers -->
+    <!-- template:headers -->
 
-<title>idid.ro - Cookies</title>
+    <title>idid.ro - Cookies</title>
 </head>
 
 <body>
 
-	<div class="box-wrap-all">
-		<div class="box-wrap">
+<div class="box-wrap-all">
+    <div class="box-wrap">
 
-			<!-- template:menu -->
+        <!-- template:menu -->
 
-			<div class="intro-cat" data-animate-effect="fadeIn">
-				<h2>Cookies</h2>
-			</div>
+        <div class="intro-cat" data-animate-effect="fadeIn">
+            <h2>Cookies</h2>
+        </div>
 
-			<div id="fh5co-media-section">
-				<div class="container">
-					<div class="page_text"></div>
+        <div id="fh5co-media-section">
+            <div class="container">
+                <div class="page_text"></div>
 
-					<div class="std">
-						<p>
-							<strong>1. Politica de utilizare Cookie-uri</strong><br />
-							Aceasta politica se refera la cookie-urile si paginile web
-							operate de SC IDID SHOP SRL&nbsp;cu sediul in Cluj
-							Napoca,&nbsp;Strada Branului nr.23, Inregistrata la Registrul
-							Comertului cu nr J12/2326/2014, CUI&nbsp;33444450, capital
-							social 200RON.
-						</p>
-						<p>&nbsp;</p>
-						<p>
-							<strong>2. Ce este un Cookie?</strong><br /> Cookie-ul este un
-							fisier de mici dimensiuni, format din litere si numere, care va
-							fi stocat pe computerul, terminalul mobil sau alte echipamente
-							ale unui utilizator de pe care se acceseaza internetul. Cookie-ul
-							este instalat prin solicitarea emisa de catre un web-server unui
-							browser (ex: Internet Explorer, Chrome) si este complet “pasiv”
-							(nu contine programe software, virusi sau spyware si nu poate
-							accesa informatiile de pe hard driverul utilizatorului).
-						</p>
-						<p>&nbsp;</p>
-						<p>
-							<strong>3. La ce sunt folosite Cookie-urile?</strong><br />
-							Aceste fisiere fac posibila recunoasterea terminalului
-							utilizatorului si prezentarea continutului intrun mod relevant,
-							adaptat preferintelor utilizatorului. Cookie-urile asigura
-							utilizatorilor o experienta placuta de navigare si sustin
-							eforturile Altex pentru a oferi servicii comfortabile
-							utilizatorilor: ex: &amp;ndash; preferintele in materie de
-							confidentialitate online, cosul de cumparaturi sau publicitate
-							relevanta. De asemenea, sunt utilizate in pregatirea unor
-							statistici anonime agregate care ne ajuta sa intelegem cum un
-							utilizator beneficiaza de paginile noastre web, permitandu-ne
-							imbunatatirea structurii si continutului lor, excluzand
-							indentificarea personala a utilizatorului.
-						</p>
-						<p>&nbsp;</p>
-						<p>
-							<strong>4. Ce Cookie-uri folosim?</strong><br /> Folosim doua
-							tipuri de Cookie-uri: per sesiune si fixe. Cele per sesiune sunt
-							fisiere temporare ce raman in terminalul utilizatorului pana la
-							terminarea sesiunii sau inchiderea aplicatiei (browser-ului web).
-							Cele fixe raman pe terminalul utilizatorului pe o perioada
-							definita de parametrii Cookie-ului sau pana sunt sterse manual de
-							utilizator.&nbsp;
-						</p>
-						<p>&nbsp;</p>
-						<p>
-							<strong>5. Cum sunt folosite cookie-urile de catre acest
-								site?</strong><br /> O vizita pe acest site poate plasa cookie-uri in
-							scopuri de:
-						</p>
-						<ul>
-							<li>Cookie-uri de performanta a site-ului</li>
-							<li>Cookie-uri de analiza a vizitatorilor</li>
-							<li>Cookie-uri de inregistrare</li>
-							<li>Cookie-uri pentru publicitate</li>
-							<li>Cookie-uri ale furnizorilor de publicitate</li>
-						</ul>
-						<p>&nbsp;</p>
-						<p>&nbsp;</p>
-						<p>&nbsp;</p>
-						<p>&nbsp;</p>
-						<p>
-							<strong>6. Contin Cookie-urile date personale?</strong>
-						</p>
-						<p>Cookie-urile in sine nu solicita informatii cu caaracter
-							personal pentru a putea fi utilizate si, in cele mai multe
-							cazuri, nu identifica personal utilizatorii de internet. Datele
-							personale colectate prin utilizarea Cookie-urilor pot fi
-							colectate doar pentru a facilita anumite functionalitati pentru
-							utilizator. Atare date sunt criptate intr-un mod care face
-							imposibil accesul persoanelor neautorizate la ele.</p>
-						<p>&nbsp;</p>
-						<p>
-							<strong>7. Stergerea Cookie-urilor</strong>
-						</p>
-						<p>In general, o aplicatie folosita pentru accesarea paginilor
-							web permite salvarea Cookie-urilor pe terminal in mod implicit.
-							Aceste setari pot fi schimbate in asa fel incat administrarea
-							automata a Cookie-urilor sa fie blocata de browser-ul web sau
-							utilizatorul sa fie informat de fiecare data cand Cookie-uri sunt
-							trimise catre terminalul sau. Informatii detaliate despre
-							posibilitatile si modurile de administrare a Cookie-urilor pot fi
-							gasite in zona de setari a aplicatiei (browser-ului web).
-							Limitarea folosirii Cookie-urilor poate afecta anumite
-							functionalitati ale paginii web.</p>
-						<p>&nbsp;</p>
-						<p>
-							<strong>8. De ce sunt cookie-urile importante pentru
-								Internet?</strong>
-						</p>
-						<p>
-							Cookie-urile reprezinta punctul central al functionarii eficiente
-							a Internetului, ajutand la generarea unei experiente de navigare
-							prietenoase si adaptata preferintelor si intereselor fiecarui
-							utilizator. Refuzarea sau dezactivarea cookieurilor poate face
-							unele site-uri imposibil de folosit.<br /> Refuzarea sau
-							dezactivarea cookie-urilor nu inseamna ca nu veti mai primi
-							publicitate online &amp;ndash; ci doar ca aceasta nu va mai putea
-							tine cont de preferintele si interesele dvs, evidentiate prin
-							comportamentul de navigare.<br /> Exemple de intrebuintari
-							importante ale cookieurilor (care nu necesita autentificarea unui
-							utilizator prin intermediul unui cont):
-						</p>
-						<ul>
-							<li>Continut si servicii adaptate preferintelor
-								utilizatorului &amp;ndash; categorii de produse si servicii.</li>
-							<li>Oferte adaptate pe interesele utilizatorilor &amp;ndash;
-								retinerea parolelor.</li>
-							<li>Retinerea filtrelor de protectie a copiilor privind
-								continutul pe Internet (optiuni family mode,functii de safe
-								search).</li>
-							<li>Limitarea frecventei de difuzare a reclamelor
-								&amp;ndash; limitarea numarului de afisari a unei reclame pentru
-								un anumit utilizator pe un site.</li>
-							<li>Furnizarea de publicitate mai relevanta pentru
-								utilizator.</li>
-							<li>Masurarea, optimizarea si caracteristicile de analytics
-								&amp;ndash; cum ar fi confirmarea unui anumit nivel de trafic pe
-								un website, ce tip de continut este vizualizat si modul cum un
-								utilizator ajunge pe un website (ex prin motoare de cautare,
-								direct, din alte website-uri etc). Website-urile deruleaza
-								aceste analize a utilizarii lor pentru a imbunatati site-urile
-								in beneficiul userilor.</li>
-						</ul>
-						<p>&nbsp;</p>
-					</div>
-				</div>
-			</div>
-			<!-- template:footermenu -->
-		</div>
-		<!-- template:footer -->
-	</div>
-	<!-- template:endscripts -->
+                <div class="std">
+                    <p>
+                        <strong>1. Politica de utilizare Cookie-uri</strong><br/>
+                        Aceasta politica se refera la cookie-urile si paginile web
+                        operate de SC IDID SHOP SRL&nbsp;cu sediul in Cluj
+                        Napoca,&nbsp;Strada Branului nr.23, Inregistrata la Registrul
+                        Comertului cu nr J12/2326/2014, CUI&nbsp;33444450, capital
+                        social 200RON.
+                    </p>
+                    <p>&nbsp;</p>
+                    <p>
+                        <strong>2. Ce este un Cookie?</strong><br/> Cookie-ul este un
+                        fisier de mici dimensiuni, format din litere si numere, care va
+                        fi stocat pe computerul, terminalul mobil sau alte echipamente
+                        ale unui utilizator de pe care se acceseaza internetul. Cookie-ul
+                        este instalat prin solicitarea emisa de catre un web-server unui
+                        browser (ex: Internet Explorer, Chrome) si este complet “pasiv”
+                        (nu contine programe software, virusi sau spyware si nu poate
+                        accesa informatiile de pe hard driverul utilizatorului).
+                    </p>
+                    <p>&nbsp;</p>
+                    <p>
+                        <strong>3. La ce sunt folosite Cookie-urile?</strong><br/>
+                        Aceste fisiere fac posibila recunoasterea terminalului
+                        utilizatorului si prezentarea continutului intrun mod relevant,
+                        adaptat preferintelor utilizatorului. Cookie-urile asigura
+                        utilizatorilor o experienta placuta de navigare si sustin
+                        eforturile Altex pentru a oferi servicii comfortabile
+                        utilizatorilor: ex: &amp;ndash; preferintele in materie de
+                        confidentialitate online, cosul de cumparaturi sau publicitate
+                        relevanta. De asemenea, sunt utilizate in pregatirea unor
+                        statistici anonime agregate care ne ajuta sa intelegem cum un
+                        utilizator beneficiaza de paginile noastre web, permitandu-ne
+                        imbunatatirea structurii si continutului lor, excluzand
+                        indentificarea personala a utilizatorului.
+                    </p>
+                    <p>&nbsp;</p>
+                    <p>
+                        <strong>4. Ce Cookie-uri folosim?</strong><br/> Folosim doua
+                        tipuri de Cookie-uri: per sesiune si fixe. Cele per sesiune sunt
+                        fisiere temporare ce raman in terminalul utilizatorului pana la
+                        terminarea sesiunii sau inchiderea aplicatiei (browser-ului web).
+                        Cele fixe raman pe terminalul utilizatorului pe o perioada
+                        definita de parametrii Cookie-ului sau pana sunt sterse manual de
+                        utilizator.&nbsp;
+                    </p>
+                    <p>&nbsp;</p>
+                    <p>
+                        <strong>5. Cum sunt folosite cookie-urile de catre acest
+                            site?</strong><br/> O vizita pe acest site poate plasa cookie-uri in
+                        scopuri de:
+                    </p>
+                    <ul>
+                        <li>Cookie-uri de performanta a site-ului</li>
+                        <li>Cookie-uri de analiza a vizitatorilor</li>
+                        <li>Cookie-uri de inregistrare</li>
+                        <li>Cookie-uri pentru publicitate</li>
+                        <li>Cookie-uri ale furnizorilor de publicitate</li>
+                    </ul>
+                    <p>&nbsp;</p>
+                    <p>&nbsp;</p>
+                    <p>&nbsp;</p>
+                    <p>&nbsp;</p>
+                    <p>
+                        <strong>6. Contin Cookie-urile date personale?</strong>
+                    </p>
+                    <p>Cookie-urile in sine nu solicita informatii cu caaracter
+                        personal pentru a putea fi utilizate si, in cele mai multe
+                        cazuri, nu identifica personal utilizatorii de internet. Datele
+                        personale colectate prin utilizarea Cookie-urilor pot fi
+                        colectate doar pentru a facilita anumite functionalitati pentru
+                        utilizator. Atare date sunt criptate intr-un mod care face
+                        imposibil accesul persoanelor neautorizate la ele.</p>
+                    <p>&nbsp;</p>
+                    <p>
+                        <strong>7. Stergerea Cookie-urilor</strong>
+                    </p>
+                    <p>In general, o aplicatie folosita pentru accesarea paginilor
+                        web permite salvarea Cookie-urilor pe terminal in mod implicit.
+                        Aceste setari pot fi schimbate in asa fel incat administrarea
+                        automata a Cookie-urilor sa fie blocata de browser-ul web sau
+                        utilizatorul sa fie informat de fiecare data cand Cookie-uri sunt
+                        trimise catre terminalul sau. Informatii detaliate despre
+                        posibilitatile si modurile de administrare a Cookie-urilor pot fi
+                        gasite in zona de setari a aplicatiei (browser-ului web).
+                        Limitarea folosirii Cookie-urilor poate afecta anumite
+                        functionalitati ale paginii web.</p>
+                    <p>&nbsp;</p>
+                    <p>
+                        <strong>8. De ce sunt cookie-urile importante pentru
+                            Internet?</strong>
+                    </p>
+                    <p>
+                        Cookie-urile reprezinta punctul central al functionarii eficiente
+                        a Internetului, ajutand la generarea unei experiente de navigare
+                        prietenoase si adaptata preferintelor si intereselor fiecarui
+                        utilizator. Refuzarea sau dezactivarea cookieurilor poate face
+                        unele site-uri imposibil de folosit.<br/> Refuzarea sau
+                        dezactivarea cookie-urilor nu inseamna ca nu veti mai primi
+                        publicitate online &amp;ndash; ci doar ca aceasta nu va mai putea
+                        tine cont de preferintele si interesele dvs, evidentiate prin
+                        comportamentul de navigare.<br/> Exemple de intrebuintari
+                        importante ale cookieurilor (care nu necesita autentificarea unui
+                        utilizator prin intermediul unui cont):
+                    </p>
+                    <ul>
+                        <li>Continut si servicii adaptate preferintelor
+                            utilizatorului &amp;ndash; categorii de produse si servicii.
+                        </li>
+                        <li>Oferte adaptate pe interesele utilizatorilor &amp;ndash;
+                            retinerea parolelor.
+                        </li>
+                        <li>Retinerea filtrelor de protectie a copiilor privind
+                            continutul pe Internet (optiuni family mode,functii de safe
+                            search).
+                        </li>
+                        <li>Limitarea frecventei de difuzare a reclamelor
+                            &amp;ndash; limitarea numarului de afisari a unei reclame pentru
+                            un anumit utilizator pe un site.
+                        </li>
+                        <li>Furnizarea de publicitate mai relevanta pentru
+                            utilizator.
+                        </li>
+                        <li>Masurarea, optimizarea si caracteristicile de analytics
+                            &amp;ndash; cum ar fi confirmarea unui anumit nivel de trafic pe
+                            un website, ce tip de continut este vizualizat si modul cum un
+                            utilizator ajunge pe un website (ex prin motoare de cautare,
+                            direct, din alte website-uri etc). Website-urile deruleaza
+                            aceste analize a utilizarii lor pentru a imbunatati site-urile
+                            in beneficiul userilor.
+                        </li>
+                    </ul>
+                    <p>&nbsp;</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- template:footermenu -->
+</div>
+<!-- template:footer -->
+
+<!-- template:endscripts -->
 </body>
