--- a/shopweb/web/index.html
+++ b/shopweb/web/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if lt IE 7]>
+<html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>
+<html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>
+<html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!-->
 <html class="no-js">
 <!--<![endif]-->
 
 <head>
 
-<!-- template:headers -->
+    <!-- template:headers -->
 
 
     <title>Produse Handmade, Lucrate Manual, Magazin Online - iDid</title>
@@ -26,83 +29,84 @@
 
 <body>
 
-	<div class="box-wrap-all">
-		<div class="box-wrap">
+<div class="box-wrap-all">
+    <div class="box-wrap">
 
-			<!-- template:menu -->
+        <!-- template:menu -->
 
-			<div class="intro" data-animate-effect="fadeIn">
-                <h1>Produse Handmade, Lucrate Manual</h1>
-				<p>
-                    Vei gasi aici bucăți de natură, multă culoare, artă și talent,<br/>
-                    detalii atent conturate. Cauti Produse Handmade, Lucrate Manual,<br/>
-                    iDid este un magazin online cu produse handmade<br/>
-                    bijuterii, genti, textile, ceasuri, vase, tablouri si multe altele.
-				</p>
-			</div>
+        <div class="intro" data-animate-effect="fadeIn">
+            <h1>Produse Handmade, Lucrate Manual</h1>
+            <p>
+                Vei gasi aici bucăți de natură, multă culoare, artă și talent,<br/>
+                detalii atent conturate. Cauti Produse Handmade, Lucrate Manual,<br/>
+                iDid este un magazin online cu produse handmade<br/>
+                bijuterii, genti, textile, ceasuri, vase, tablouri si multe altele.
+            </p>
+        </div>
 
-			<div id="fh5co-media-section">
-				<div class="container">
-					<div class="row animate-box">
-						<div class="col-md-8 col-md-offset-2 text-center heading-section">
-                            <h2>Selecție atentă de produse handmade</h2>
-							<p>Dorim să promovăm aceste produse, pentru că sunt unice, nu
-								există nicăieri în lume altele. Mai mult, creatorii lor și-au
-								lăsat o parte din suflet în fiecare piesă, iar noi respectăm
-								asta. Te invităm și pe tine să o faci!</p>
-						</div>
-					</div>
-
-					<!-- snip:item -->
-					<div class="col-md-4 animate-box bg-cat">
-						<a class="hover">
-							<div class="fh5co-cover">
-								<img class="cat_img"/>
-								<div class="desc">
-									<h3></h3>
-									<span>Vezi produse</span>
-								</div>
-							</div>
-						</a>
-					</div>
-					<!-- end -->
-
-
-                    <div class="row animate-box">
-                        <div class="col-md-12">
-                            <p><img src="http://idid.ro/static/images/logo.svg" alt="Produse Handmade, Lucrate Manual"
-                                    style="float:right" width="450px"/>Produse handmade sau manuale, cunosc in prezent o
-                                reapreciere la nivel global, fiind definite la un nivel general ca HANDMADE, nume
-                                provenit din limba engleza, in traducere reprezentand facut de mana.
-                            </p>
-                            <p>
-                                Idid nu vinde doar simple produse handmade, ci un produs rezultat dintr-un mestesug
-                                imbinat cu arta artizanatului. Mestesugul reprezinta deopotriva meserie, profesiune, dar
-                                si pricepere, indemanare, abilitate, talent iar Artizanatul este un mestesug practicat
-                                cu arta.
-                            </p>
-                            <p>
-                                Produsele lucrate manual, handmade, sunt produsele si serviciile executate de
-                                mestesugari, mici meseriasi si artizani, fie complet manual, fie cu ajutorul uneltelor
-                                manuale sau chiar mecanice, atat timp cat contributia manuala a mestesugarului sau
-                                artizanului ramane cea mai substantiala componenta a produsului finit.
-                            </p>
-
-                        </div>
+        <div id="fh5co-media-section">
+            <div class="container">
+                <div class="row animate-box">
+                    <div class="col-md-8 col-md-offset-2 text-center heading-section">
+                        <h2>Selecție atentă de produse handmade</h2>
+                        <p>Dorim să promovăm aceste produse, pentru că sunt unice, nu
+                            există nicăieri în lume altele. Mai mult, creatorii lor și-au
+                            lăsat o parte din suflet în fiecare piesă, iar noi respectăm
+                            asta. Te invităm și pe tine să o faci!</p>
                     </div>
+                </div>
+
+                <!-- snip:item -->
+                <div class="col-md-4 animate-box bg-cat">
+                    <a class="hover">
+                        <div class="fh5co-cover">
+                            <img class="cat_img"/>
+                            <div class="desc">
+                                <h3></h3>
+                                <span>Vezi produse</span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- end -->
 
 
+                <div class="row animate-box">
+                    <div class="col-md-12">
+                        <p><img src="http://idid.ro/static/images/logo.svg" alt="Produse Handmade, Lucrate Manual"
+                                style="float:right" width="450px"/>Produse handmade sau manuale, cunosc in prezent o
+                            reapreciere la nivel global, fiind definite la un nivel general ca HANDMADE, nume
+                            provenit din limba engleza, in traducere reprezentand facut de mana.
+                        </p>
+                        <p>
+                            Idid nu vinde doar simple produse handmade, ci un produs rezultat dintr-un mestesug
+                            imbinat cu arta artizanatului. Mestesugul reprezinta deopotriva meserie, profesiune, dar
+                            si pricepere, indemanare, abilitate, talent iar Artizanatul este un mestesug practicat
+                            cu arta.
+                        </p>
+                        <p>
+                            Produsele lucrate manual, handmade, sunt produsele si serviciile executate de
+                            mestesugari, mici meseriasi si artizani, fie complet manual, fie cu ajutorul uneltelor
+                            manuale sau chiar mecanice, atat timp cat contributia manuala a mestesugarului sau
+                            artizanului ramane cea mai substantiala componenta a produsului finit.
+                        </p>
+
+                    </div>
                 </div>
 
 
-                <!-- template:footermenu -->
+            </div>
 
-		</div>
+
         </div>
+    </div>
+    <!-- template:footermenu -->
 
-        <!-- template:footer -->
+</div>
 
-	<!-- template:endscripts -->
+<!-- template:footer -->
+
+<!-- template:endscripts -->
 </body>
 </html>
 
