--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if lt IE 7]>
+<html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>
+<html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>
+<html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!-->
 <html class="no-js">
 <!--<![endif]-->
 
 <head>
 
-<!-- template:headers -->
+    <!-- template:headers -->
 
     <title>
-		<!--snip:cat_name-->
-		<!--end-->
-		handmade, lucrate manual
-	</title>
+        <!--snip:cat_name-->
+        <!--end-->
+        handmade, lucrate manual
+    </title>
     <meta name="description"
           content="Cauti Produse Handmade, Lucrate Manual? iDid a pregatit o serie de produse lucrat manual, bijuterii, genti, textile, ceasuri, tablouri, vase si multe altele."/>
 
@@ -23,80 +26,80 @@
 
 <body>
 
-	<div class="box-wrap-all">
-		<div class="box-wrap">
+<div class="box-wrap-all">
+    <div class="box-wrap">
 
-			<!-- template:menu -->
+        <!-- template:menu -->
 
-			<div class="intro-cat" data-animate-effect="fadeIn">
-                <h1>
-                    <span class="numeprodus"><!-- snip:cat_name --><span></span><!-- end --></span> Handmade, Lucrate
-                    Manual
-                </h1>
-			</div>
+        <div class="intro-cat" data-animate-effect="fadeIn">
+            <h1>
+                <span class="numeprodus"><!-- snip:cat_name --><span></span><!-- end --></span> Handmade, Lucrate
+                Manual
+            </h1>
+        </div>
 
-			<div id="fh5co-media-section">
-				<div class="container">
-					<div class="row animate-box">
-
-
-                        <div class="col-md-12">
-                            <p class="mic">Cauti produse din categoria: <span
-                                    class="numeprodus"><!-- snip:cat_name --><span></span><!-- end --></span> handmade?
-                                iDid a pregatit o serie de produse din categoria <span class="numeprodus"><!-- snip:cat_name --><span></span>
-                                    <!-- end --></span> lucrate manual. Comanda online produse handmade atent
-                                selectionate, in asa fel incat calitatea materialelor, atentia la detalii in prelucrare
-                                si talentul, sa fie cele care creeaza diferenta.</p>
-                            <p class="mic">Livrarea produselor din categoria: <span class="numeprodus"><!-- snip:cat_name --><span></span>
-                                <!-- end --></span> - lucrate manual se face de catre o societate de curierat, la
-                                domiciliul clientului, in termen de 2 zile de la expedierea comenzii, si poate ajunge la
-                                destinatie dupa maxim 48 ore.</p>
-                        </div>
+        <div id="fh5co-media-section">
+            <div class="container">
+                <div class="row animate-box">
 
 
-                        <div class="col-md-8 col-md-offset-2 text-center heading-section">
+                    <div class="col-md-12">
+                        <p class="mic">Cauti produse din categoria: <span
+                                class="numeprodus"><!-- snip:cat_name --><span></span><!-- end --></span> handmade?
+                            iDid a pregatit o serie de produse din categoria <span class="numeprodus"><!-- snip:cat_name --><span></span>
+                                <!-- end --></span> lucrate manual. Comanda online produse handmade atent
+                            selectionate, in asa fel incat calitatea materialelor, atentia la detalii in prelucrare
+                            si talentul, sa fie cele care creeaza diferenta.</p>
+                        <p class="mic">Livrarea produselor din categoria: <span class="numeprodus"><!-- snip:cat_name --><span></span>
+                            <!-- end --></span> - lucrate manual se face de catre o societate de curierat, la
+                            domiciliul clientului, in termen de 2 zile de la expedierea comenzii, si poate ajunge la
+                            destinatie dupa maxim 48 ore.</p>
+                    </div>
 
-							<span>Ordonează după</span> <select data-placeholder="..."
-								id="sortSelect">
-								<option value=""></option>
-								<!-- snip:sort -->
-								<option value="bynameasc">Nume › ascendent</option>
-								<option value="bynamedesc">Nume › descendent</option>
-								<option value="bypriceasc">Preț › ascendent</option>
-								<option value="bypricedesc">Preț › descendent</option>
-								<!-- end -->
-							</select>
+
+                    <div class="col-md-8 col-md-offset-2 text-center heading-section">
+
+                        <span>Ordonează după</span> <select data-placeholder="..."
+                                                            id="sortSelect">
+                        <option value=""></option>
+                        <!-- snip:sort -->
+                        <option value="bynameasc">Nume › ascendent</option>
+                        <option value="bynamedesc">Nume › descendent</option>
+                        <option value="bypriceasc">Preț › ascendent</option>
+                        <option value="bypricedesc">Preț › descendent</option>
+                        <!-- end -->
+                    </select>
 
 
-						</div>
-					</div>
+                    </div>
+                </div>
 
-					<!-- snip:item -->
-					<div class="col-md-3 animate-box bg-cat">
-						<figure>
-							<a class="hover">
-								<div class="fh5co-cover-produs">
-									<div class="desc">
-										<img/>
-										<h3></h3>
-										<a href="#" class="cartt add_to_cart_box"><span
-											class="icon-cart"></span> Adaugă în coș</a>
-										<p></p>
-									</div>
-								</div>
-							</a>
-						</figure>
-					</div>
-					<!-- end -->
-				</div>
-			</div>
+                <!-- snip:item -->
+                <div class="col-md-3 animate-box bg-cat">
+                    <figure>
+                        <a class="hover">
+                            <div class="fh5co-cover-produs">
+                                <div class="desc">
+                                    <img/>
+                                    <h3></h3>
+                                    <a href="#" class="cartt add_to_cart_box"><span
+                                            class="icon-cart"></span> Adaugă în coș</a>
+                                    <p></p>
+                                </div>
+                            </div>
+                        </a>
+                    </figure>
+                </div>
+                <!-- end -->
+            </div>
+        </div>
+    </div>
+    <!-- template:footermenu -->
+</div>
+<!-- template:footer -->
 
-			<!-- template:footermenu -->
-		</div>
-		<!-- template:footer -->
-	</div>
-	<!-- template:endscripts -->
-	<script src="/static/js/products.js"></script>
+<!-- template:endscripts -->
+<script src="/static/js/products.js"></script>
 </body>
 </html>
 
